--- a/app/src/main/res/layout/activity_score_table_main.xml
+++ b/app/src/main/res/layout/activity_score_table_main.xml
@@ -3,6 +3,12 @@
     android:layout_width="fill_parent" android:layout_height="fill_parent"
     android:orientation="vertical">
 
+    <Button
+        android:id="@+id/button5"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:text="Delete all..." />
+
     <TextView android:layout_width="fill_parent"
         android:layout_height="wrap_content" android:padding="10dp"
         android:text="@string/scoreboard_title" android:textSize="20sp" />
